# ababil

./: .gitignore  README.md  SETUP.md  build.sh
ababil_core/: .gitignore  Cargo.toml  README.md  build.rs
ababil_core/src/: lib.rs
ababil_flutter/: README.md  pubspec.yaml
ababil_flutter/android/app/: build.gradle.kts
ababil_flutter/ios/Runner/: Info.plist
ababil_flutter/ios/Runner.xcodeproj/: project.pbxproj
ababil_flutter/lib/: main.dart
ababil_flutter/lib/core/: http_client.dart
ababil_flutter/lib/data/services/: native_library_service.dart  postman_service.dart
ababil_flutter/lib/domain/models/: collection.dart  environment.dart  http_request.dart  postman_converter.dart  request_auth.dart  request_body.dart  request_header.dart  request_path.dart  request_url.dart  request_variable.dart  variable.dart
ababil_flutter/lib/screens/: home_screen.dart
ababil_flutter/lib/ui/screens/: home_screen.dart
ababil_flutter/lib/ui/viewmodels/: collections_view_model.dart  home_view_model.dart
ababil_flutter/lib/ui/widgets/: authorization_panel.dart  collection_dialogs.dart  custom_code_editor.dart  import_export_dialog.dart  params_panel.dart  send_dropdown_item.dart  sidebar.dart  (+1 more)
ababil_flutter/linux/: CMakeLists.txt
ababil_flutter/linux/runner/: my_application.cc
ababil_flutter/macos/: libababil_core.dylib
ababil_flutter/macos/Runner.xcodeproj/: project.pbxproj
ababil_flutter/test/: widget_test.dart
ababil_flutter/web/: index.html  manifest.json
ababil_flutter/windows/: CMakeLists.txt
ababil_flutter/windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
