[package]
name = "ababil_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ababil_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
cbindgen = "0.24"

